[af-307] feat: 상품 검색 조건 추가 - 상품 검색 시 아이템 12개 조회 - 상품 검색에 페이지 추가 - 카테고리 별, 아이템 이름, 제품 이름, 제조사 이름으로 검색 가능