@@ -11,6 +11,7 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.List;
 
 @RestController
@@ -23,12 +24,16 @@ public class ItemController {
     @GetMapping
     @Operation(summary = "검색어로 전체 상품 조회", description = "검색어와 검색유형에 따라 전체 상품을 여러개 조회한다.")
     public ResponseEntity<PageResponse<SearchItemResponse>> search(
-            @RequestParam(name = "size", defaultValue = "10") int size,
+            @RequestParam(name = "page", defaultValue = "0") int page,
+            @RequestParam(name = "size", defaultValue = "12") int size,
             @RequestParam(name = "keyword") String keyword,
-            @RequestParam(name = "keywordType") @Schema(example = "type,name") String keywordType
+            @RequestParam(name = "categories") @Schema(example = "탁주/막걸리 또는 과실주/와인") String categories
     ) {
-        List<String> parseType = List.of(keywordType.split(","));
-        PageResponse<SearchItemResponse> pageResponse = PageResponse.of(this.itemService.search(size, keyword, parseType));
+        List<String> parseType = categories == null || categories.isBlank()
+                ? Collections.emptyList()
+                : List.of(categories.split(","));
+
+        PageResponse<SearchItemResponse> pageResponse = PageResponse.of(this.itemService.search(page, size, keyword, parseType));
         return ResponseEntity.ok().body(pageResponse);
     }
 
